Remove all errors in code