@@ -2,10 +2,10 @@ package tech.alexnijjar.endermanoverhaul.client.renderer.base;
 
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.Mth;
+import software.bernie.geckolib.animatable.GeoAnimatable;
+import software.bernie.geckolib.animation.AnimationState;
+import software.bernie.geckolib.cache.object.GeoBone;
 import software.bernie.geckolib.constant.DataTickets;
-import software.bernie.geckolib.core.animatable.GeoAnimatable;
-import software.bernie.geckolib.core.animatable.model.CoreGeoBone;
-import software.bernie.geckolib.core.animation.AnimationState;
 import software.bernie.geckolib.model.DefaultedEntityGeoModel;
 import software.bernie.geckolib.model.data.EntityModelData;
 
@@ -23,10 +23,10 @@ public class BaseEndermanModel<T extends GeoAnimatable> extends DefaultedEntityG
     public void setCustomAnimations(T animatable, long instanceId, AnimationState<T> animationState) {
         if (!turnsHead) return;
 
-        CoreGeoBone head = getAnimationProcessor().getBone("head");
+        GeoBone head = getAnimationProcessor().getBone("head");
         if (head == null) return;
         if (head.getChildBones().isEmpty()) return;
-        CoreGeoBone headRotation = head.getChildBones().get(0);
+        GeoBone headRotation = head.getChildBones().getFirst();
         if (headRotation == null) return;
 
         EntityModelData entityData = animationState.getData(DataTickets.ENTITY_MODEL_DATA);
